--- a/index.html
+++ b/index.html
@@ -13,31 +13,31 @@
 
   <body>
     <header class="header">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light navegacion ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">LOGO</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="#">Servicios</a>
+                <a class="nav-link " aria-current="page" href="page/servicios.html">Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="#">Productos</a>
+                <a class="nav-link " aria-current="page" href="page/productos.html">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="#">Atencion al cliente</a>
+                <a class="nav-link " aria-current="page" href="page/atencion_al_cliente.html">Atencion al cliente</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="#">Noticias</a>
+                <a class="nav-link " aria-current="page" href="page/noticias.html">Noticias</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="#">Contactenos</a>
+                <a class="nav-link " aria-current="page" href="page/contactenos.html">Contactenos</a>
               </li>
             </ul>
           </div>
@@ -130,6 +130,16 @@
               <input type="button" value="Producto 5" />
               <input type="button" value="Producto 6" />
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="card_section">
+        <div class="card mb-3 colores_card">
+          <img src="./imagenes/imagendos.jpg" class="card-img-top imagen_de_la_card" alt="...">
+          <div class="card-body">
+            <h3 class="card-title text-light text-center">Servicio Recomendado</h3>
+            <p class="card-text text-light">Un servicio recomendado, hosting para los que quieren calidad. es sencillo recomendar un producto que nos proporciona servicio.</p>
+
           </div>
         </div>
       </section>
