trabajo para boostrap arreglado con grid

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
           />
         </div>
       </section>
+      
       <!-- ***************************************** Productos BODY******************************************* -->
       <section class="ProductosSeccionProductos">
         <div>
@@ -130,6 +131,40 @@
               <input type="button" value="Producto 5" />
               <input type="button" value="Producto 6" />
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="container"> 
+        <div class="row justify-content-around">
+          <div class="col-4">
+            Producto 7
+          </div>
+          <div class="col-4">
+            Producto 8
+          </div>
+        </div>
+        <div class="row justify-content-around">
+          <div class="col-4">
+            Producto 9
+          </div>
+          <div class="col-4">
+            Producto 10
+          </div>
+        </div>
+        <div class="row justify-content-around">
+          <div class="col-4">
+            Producto 11
+          </div>
+          <div class="col-4">
+            Producto 12
+          </div>
+        </div>
+        <div class="row justify-content-around">
+          <div class="col-4">
+            Producto 13
+          </div>
+          <div class="col-4">
+            Producto 14
           </div>
         </div>
       </section>
